
CHANGE LOG
=================================================

== Changelog ==

= 1.2.4.6 = (Not released)
* Performance: When persistent object caching (server setup or 3rd party) is not available CoursePress will fall back to using transients to speed up page loads.
* Fixed: [course_join_button] now works properly on pages (bug caused it only to work on posts).

= 1.2.4.5 =
* Fixes issue with marking an order as paid with MarketPress
* Fixed text domain issues with the CoursePress theme
* Fixes issue with the LOGIN_ADDRESS email tag and its URL
* Fixed jQuery issues on the front-end caused by "live" function

= 1.2.4.4 =
* Resolved issue with unit element content saving / removed unit HTML editor

= 1.2.4.3 =
* Fixed issues with Unit HTML editor

= 1.2.4.2 =
* Updated MarketPress to 2.9.6
* Added Unit HTML editor back (for Mac)
* Fixed bug with unit editor (double editor on switch)

= 1.2.4.1 =
* Updated course structure (admin and front) to reflect recent changes in the units builder logic
* Fixed issue with Jatpack's CSS editor
* Removed Unit Builder HTML editors for Mac users (until we find better solution)
* Added additional filters for developers in shortcodes

= 1.2.4 =
* Added option for deleting student answers / responses
* Added option for instructor to access units and other course inner pages without need to enroll into course
* Fixed JS conflicts caused issues with WP admin menu on hover
* Fixed responsive issues on the course archive page with the default CoursePress theme

= 1.2.3.9 =
* Added HTML editor to the units builder
* Fixed issue with hidden students in the reports list (multisite)
* Fixed issue with wrong redirection link when submitting data on the last unit page (front)

= 1.2.3.8 =
* Added scroll (slimscroll) for the long lists of units on the course unit admin page
* Added integration with Messaging (1.1.6.7 and above) plugin (http://premium.wpmudev.org/project/messaging/)
* Fixed issues with BBPress topics when CoursePress is active