@@ -9,6 +9,7 @@ CHANGE LOG
 = 1.2.4.6 = (Not released)
 * Performance: When persistent object caching (server setup or 3rd party) is not available CoursePress will fall back to using transients to speed up page loads.
 * Fixed: [course_join_button] now works properly on pages (bug caused it only to work on posts).
+* Changed: [course_thumbnail] deprecated. Will revert to preferred [course_media type="thumbnail"] using the proper Course List image as thumbnail.
 
 = 1.2.4.5 =
 * Fixes issue with marking an order as paid with MarketPress
